index.css
body {
    height: 200vh;
    width: 100vw;
    margin: 0;
    border: 10px solid black;
}

.wrapper {
    background-color: black;
    height: 200vh;
    margin: 0;
    padding: 0;
    border: 0;
    font-family: 'Graphik', Helvetica, Arial, sans-serif;
}


/* Enroll */
.enroll-container {
    display: grid;
    height: 85vh;
    grid-template-columns: 1 1fr;
    grid-template-rows: 10fr 60fr 25fr;
    background-image: url("https://www.hulu.com/static/hitch/s3/attachments/ckbvd0gyz00xg19mlsu9nayv7-homepage-masthead-test-desktop-3200x1320-v4c-6-16-20.jpg");
    background-size: 100vw;
}


.enroll-header-container {
    background: linear-gradient(to bottom, black, rgba(0, 0, 0, 0.753), rgba(0, 0, 0, 0.616), transparent);   ;
}

.enroll-header-container {
    color: white;
    display: grid;
    grid-template-columns: 12fr 2fr;
}

.header-button {
    font-size: 9px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
    border: none;
    background: none;
    color: white;
}

.header-button:hover {
    opacity: 0.75;
}

.enroll-main-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(8 1fr);
}

.enroll-main {
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

#main-2 {
    color: #2ab193;
    font-size: 8px;
    font-weight: bold;
    letter-spacing: 0.5px;
    line-height: 13px;
}

#main-3 {
    display: flex;
    justify-content: center;
    align-items: center;
}

#main-4 {
    font-size: 15px;
    font-weight: bold;
}

#main-5 {
    color: rgba(255, 255, 255, 0.753);
    font-size: 11px;
    font-weight: lighter; 
}

#main-6 {
    height:  100%;
}

.button {
    font-weight: bold;
    border-radius: 2.5px;
    border: 10px solid white;
}

#start-trial {
    background-color: white;
    color: black;
    font-size: 10px;
    font-weight: lighter;
}

#start-trial:hover {
    opacity: 0.75;
}

#main-7 {
    color: rgba(243, 240, 240, 0.534);
    font-size: 6.75px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 20px; 
}

.hulu-logo {
    display: flex;
    justify-content: center;
    align-items: center;
}

#hulu-logo {
    width:30%; 
    display: flex;
    justify-content: center;
    align-items: center;
}

.enroll-banner {
    background-image: linear-gradient(to right, #041318, rgb(10, 89, 114));
    display: flex;
    flex-direction: row;
    margin-top: 15px;
    height: 90%;
}

.enroll-banner-content-left {
    width: 33%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#multi-logos {
    width: 80%;
}

.enroll-banner-content-center-container {
    width: 34%;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding: 15px 0px 15px 0px;
}

#banner-center-top {
    color: #2ab193;
    font-size: 8px;
    font-weight: bold;
}

#banner-center-middle {
    font-weight: lighter;
}

#banner-center-bottom {
    font-size: 8px;
    font-weight: lighter;
    color: rgba(255, 255, 255, 0.664);
    text-decoration-line: underline;
}

.enroll-banner-content-right-container {
    width: 33%;
    height: 100%;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
}

#banner-right-top {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-right: 10%;
}

#get-bundle-btn {
    color: white;
    font-size: 9.5px;
    font-weight: lighter;
    padding: 10px 10px 10px 10px;
    background-color: transparent;
    border: 1.5px solid white;
    border-radius: 2px;
}

#banner-right-bottom {
    color: rgba(255, 255, 255, 0.493);
    padding-top: 5px;
    font-size: 6.5px;
    text-decoration: underline;
}

/* Movies */
.movies-container {
    height: 65vh;
    background-color: black;
}

.movies-top-container {
    color: white;
    display: flex;
    flex-direction: column;
    height: 14em;
}

#movies-row-1 {
    color: #2ab193;
    display: flex;
    justify-content: center ;
    align-items: flex-end;
    font-size: 10px;
    font-weight: bolder;
    height: 6.5em;
}

#movies-row-2 {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 10px;
    font-size: 44px;
    font-weight: bolder;
}

#movies-row-3 {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 20px;
    font-size: 13px;
    font-weight: lighter;
    opacity: 0.9;
}

#movies-row-4 {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 5px;
    font-size: 13px;
    font-weight: lighter;
    opacity: 0.9;
}

.movies-gallery-container {
    height: 55%;
    width: 100vw;
    display: flex;
    flex-direction: row;
    position: absolute;
    justify-content: space;
}

.movies-gallery{
    color: white;
    height: 57vh;
    display: flex;
    flex-direction: row;
    margin: 0px;
    overflow: hidden;
    flex-shrink: 1;
    max-width: 25%;
}

#poster-blank-left {
    background-color: black;
    width: 6vw;
}

#poster-blank-right {
    background-color: black;
    width: 6vw;
}

.img {
    opacity: 0.7;
}

#img-1 {
    border-right: 5px solid black;
}

#img-2 {
    border-right: 5px solid black;
    border-left: 15px solid black;
}

#img-3 {
    border-right: 5px solid black;
    border-left: 15px solid black;

}

#img-4 {
    border-left: 15px solid black;
}

#poster-4 {
  display: flex;
}

.caption {
    position: absolute;
    top: 8px;
}

#cap-1 {
    position: absolute;
    left: 50px;
}

#cap-2 {
    position: absolute;
    left: 272px;
}

#cap-3 {
    position: absolute;
    left: 490px;
}

#cap-4 {
    position: absolute;
    left: 910px;
}

.cap-top {
    opacity: .75;
    font-size: 11px;
    font-weight: lighter;
}

.cap-bottom {
   font-weight: bolder; 
   color: white;
}

.movies-bottom-container {
    color: rgba(255, 255, 255, 0.561);
    display: flex;
    justify-content: flex-end;
    align-items: center;
    align-content: space-around;
    margin-top: 308px;
    margin-right: 100px;
}

#bottom-content-5{
    font-size: 6.5px;
}

